--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,11 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/jln0x1"
+    - label: "Mastodon"
+      icon: "fab fa-mastodon"
+      url: "https://social.tchncs.de/web/@mialikescoffee"
+    
+    
   
    
 
