--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/Berlin
 
 include:
   - _pages
@@ -78,6 +78,8 @@ footer:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/jln0x1"
+    - label: "Impressum"
+      url: "https://mialikescoffee.com/impressum"
    
 
 defaults:
