--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: mail@mialikescoffee.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ein Blog über IT, Security und Privacy. Powered by coffee.
 twitter_username: jln0x1
-minimal_mistakes_skin: contrast
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
