--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: Europe/Berlin
+locale: de_DE
 
 include:
   - _pages
