--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 twitter_username: jln0x1
 minimal_mistakes_skin: contrast
 search: true
+show_date: true
 
 # Build settings
 markdown: kramdown
