--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: mialikescoffee.com
 email: mail@mialikescoffee.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about IT and security. Powered by coffee.
-minimal_mistakes_skin: contrast
+minimal_mistakes_skin: neon
 search: true
 
 # Build settings
